--- a/views/checkout.html
+++ b/views/checkout.html
@@ -16,7 +16,7 @@
             height: 97.5vh;
             border-radius: 10px;
             border: none;
-            background-color: grey;
+            background-color: darkslategray;
         }
         .topPanel{
             width: 98%;
@@ -24,7 +24,7 @@
             padding: 1%;
             border-radius: 10px 10px 0 0;
             border: none;
-            background-color: lightseagreen;
+            background-color: darkslategray;
             overflow-y: scroll;
         }
         .bottomPanel{
@@ -57,7 +57,7 @@
             flex-wrap: nowrap;
             overflow-x: scroll;
             margin: 0;
-            background-color: grey;
+            background-color: whitesmoke;
             border-radius: 10px;
             border: none;
         }
@@ -67,7 +67,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             margin: 0;
-            background-color: grey;
+            background-color: whitesmoke;
             border-radius: 10px;
             border: none;
             padding: 1%;
@@ -92,7 +92,8 @@
             margin: 1%;
             border-radius: 10px;
             border: none;
-            background-color: aquamarine;
+            background-color: darkslategray;
+            color: whitesmoke;
             width: 20%;
             min-width: 20%;
             max-width: 20%;
@@ -107,6 +108,7 @@
             border-radius: 10px;
             border: none;
             background-color: whitesmoke;
+            color: black;
             width: fit-content !important; 
             min-width: fit-content !important; 
             max-width: fit-content !important; 
@@ -116,8 +118,8 @@
 
         .generalButton{
             width: fit-content;
-            background-color: green;
-            color: whitesmoke;
+            background-color: whitesmoke;
+            color: black;
             border-radius: 5px;
             border: none;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
